--- a/doc/references.bib
+++ b/doc/references.bib
@@ -75,7 +75,7 @@
 	JOURNAL = {CNN}
 }
 
-@ARTICLE{nycaffirmative,
+@ARTICLE{nytaffirmative,
 	AUTHOR = {Zach Montague},
 	TITLE = {Rejection of Affirmative Action Draws Strong Reactions From Right and Left},
 	YEAR = {2023},
