More blog post revisions, mostly on modeling part, added comments, created readme

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -9,6 +9,20 @@
 %   * http://tug.ctan.org/tex-archive/macros/latex/contrib/aguplus/sample.bib *
 %   ****************************************
 % 
+
+@ARTICLE{nb_confusion,
+	TITLE = {Naive Bayes Classification Tutorial using Scikit-learn},
+	YEAR = {2023},
+	JOURNAL = {Datacamp}
+}
+
+@ARTICLE{preprocessing,
+	AUTHOR = {Jason Brownlee},
+	TITLE = {How to Develop a Deep Learning Bag-of-Words Model for Sentiment Analysis (Text Classification)},
+	YEAR = {2020},
+	JOURNAL = {Machine Learning Mastery}
+}
+
 @ARTICLE{cnntrump,
 	AUTHOR = {Kara Scannell and John Miller and Jeremy Herb and Devan Cole},
 	TITLE = {Donald Trump indicted by Manhattan grand jury on more than 30 counts related to business fraud},
